--- a/portfolioapp/templates/index.html
+++ b/portfolioapp/templates/index.html
@@ -94,17 +94,17 @@
 <section id="contact">
   <h2>Contact</h2>
   <div class="contact-links">
-    <a href="https://www.linkedin.com/in/your-username" target="_blank">
+    <a href="https://www.linkedin.com/in/santoshrajbhandari" target="_blank">
       <img src="{% static 'icons/linkedin.svg' %}" alt="LinkedIn"> LinkedIn
     </a>
-    <a href="https://github.com/your-github" target="_blank">
+    <a href="https://github.com/santoshrajbhandari" target="_blank">
       <img src="{% static 'icons/github.svg' %}" alt="GitHub"> GitHub
     </a>
-    <a href="mailto:youremail@example.com">
-      <img src="{% static 'icons/email.svg' %}" alt="Email"> youremail@example.com
+    <a href="mailto:tm@santoshrajbhandari.com.np">
+      <img src="{% static 'icons/email.svg' %}" alt="Email"> tm@santoshrajbhandari.com.np
     </a>
-    <a href="tel:+977-98XXXXXXXX">
-      <img src="{% static 'icons/phone.svg' %}" alt="Phone"> +977-98XXXXXXXX
+    <a href="tel:+977-9864356472">
+      <img src="{% static 'icons/mobile.svg' %}" alt="Phone"> +977-9864356472
     </a>
   </div>
 </section>
