--- a/portfolioapp/templates/index.html
+++ b/portfolioapp/templates/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ site_title|default:"My Portfolio" }}</title>
+  <title>{{ site_title|default:"Sir Santosh" }}</title>
+
+  <link rel="icon" type="image/png" href="{% static 'images/title2.svg' %}">
 
   <!-- Google Font: Chemistry-style narrow sans -->
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap" rel="stylesheet">
