--- a/portfolioapp/templates/index.html
+++ b/portfolioapp/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ site_title|default:"Sir Santosh" }}</title>
 
-  <link rel="icon" type="image/png" href="{% static 'images/title2.svg' %}">
+  <link rel="icon" type="image/png" href="{% static 'images/title1.png' %}">
 
   <!-- Google Font: Chemistry-style narrow sans -->
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap" rel="stylesheet">
